added opengraph protocol

--- a/index.html
+++ b/index.html
@@ -3,8 +3,41 @@
 	<head>
 		<meta charset="UTF-8" />
 		<link rel="icon" type="image/svg+xml" href="/ChatMe-Logo.svg" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Vite + React + TS</title>
+		<!-- HTML Meta Tags -->
+		<title>ChatMe</title>
+		<meta name="description" content="a full stack chat application" />
+
+		<!-- Facebook Meta Tags -->
+		<meta
+			property="og:url"
+			content="https://multi-step-form-eok7-399yvwxfg-seraphf2p.vercel.app/"
+		/>
+		<meta property="og:type" content="website" />
+		<meta property="og:title" content="ChatMe" />
+		<meta property="og:description" content="a full stack chat application" />
+		<meta
+			property="og:image"
+			content="https://opengraph.b-cdn.net/production/documents/b12a9e1b-7dc1-462a-9421-284be7a86250.png?token=pLsiERXQKET5QiuyJxrA5fVX9lr3SIZizQ1nkwfbQEg&height=600&width=1200&expires=33246358620"
+		/>
+
+		<!-- Twitter Meta Tags -->
+		<meta name="twitter:card" content="summary_large_image" />
+		<meta
+			property="twitter:domain"
+			content="multi-step-form-eok7-399yvwxfg-seraphf2p.vercel.app"
+		/>
+		<meta
+			property="twitter:url"
+			content="https://multi-step-form-eok7-399yvwxfg-seraphf2p.vercel.app/"
+		/>
+		<meta name="twitter:title" content="ChatMe" />
+		<meta name="twitter:description" content="a full stack chat application" />
+		<meta
+			name="twitter:image"
+			content="https://opengraph.b-cdn.net/production/documents/b12a9e1b-7dc1-462a-9421-284be7a86250.png?token=pLsiERXQKET5QiuyJxrA5fVX9lr3SIZizQ1nkwfbQEg&height=600&width=1200&expires=33246358620"
+		/>
+
+		<!-- Meta Tags Generated via https://www.opengraph.xyz -->
 	</head>
 	<body>
 		<div id="root"></div>
