changed opengraph image

--- a/index.html
+++ b/index.html
@@ -8,33 +8,27 @@
 		<meta name="description" content="a full stack chat application" />
 
 		<!-- Facebook Meta Tags -->
-		<meta
-			property="og:url"
-			content="https://multi-step-form-eok7-399yvwxfg-seraphf2p.vercel.app/"
-		/>
+		<meta property="og:url" content="https://chat-me-seraphf2p.vercel.app/" />
 		<meta property="og:type" content="website" />
 		<meta property="og:title" content="ChatMe" />
 		<meta property="og:description" content="a full stack chat application" />
 		<meta
 			property="og:image"
-			content="https://opengraph.b-cdn.net/production/documents/b12a9e1b-7dc1-462a-9421-284be7a86250.png?token=pLsiERXQKET5QiuyJxrA5fVX9lr3SIZizQ1nkwfbQEg&height=600&width=1200&expires=33246358620"
+			content="https://opengraph.b-cdn.net/production/documents/443b9f05-7dba-4f6c-879d-f392b4a6981d.jpg?token=I3NwVk6abTa2M-UfC2LrU6aWzKB1Z1KkT_tSqvmTU3w&height=640&width=925&expires=33246361676"
 		/>
 
 		<!-- Twitter Meta Tags -->
 		<meta name="twitter:card" content="summary_large_image" />
-		<meta
-			property="twitter:domain"
-			content="multi-step-form-eok7-399yvwxfg-seraphf2p.vercel.app"
-		/>
+		<meta property="twitter:domain" content="chat-me-seraphf2p.vercel.app" />
 		<meta
 			property="twitter:url"
-			content="https://multi-step-form-eok7-399yvwxfg-seraphf2p.vercel.app/"
+			content="https://chat-me-seraphf2p.vercel.app/"
 		/>
 		<meta name="twitter:title" content="ChatMe" />
 		<meta name="twitter:description" content="a full stack chat application" />
 		<meta
 			name="twitter:image"
-			content="https://opengraph.b-cdn.net/production/documents/b12a9e1b-7dc1-462a-9421-284be7a86250.png?token=pLsiERXQKET5QiuyJxrA5fVX9lr3SIZizQ1nkwfbQEg&height=600&width=1200&expires=33246358620"
+			content="https://opengraph.b-cdn.net/production/documents/443b9f05-7dba-4f6c-879d-f392b4a6981d.jpg?token=I3NwVk6abTa2M-UfC2LrU6aWzKB1Z1KkT_tSqvmTU3w&height=640&width=925&expires=33246361676"
 		/>
 
 		<!-- Meta Tags Generated via https://www.opengraph.xyz -->
